# Illumination-Engine-Server

./: README.md
GameServer/: .gitignore  CMakeLists.txt  gameserver.cpp
GameServer/Protocol/: CMakeLists.txt  PacketReader.cpp  Protocol.h
GameServer/Resources/: CMakeLists.txt  Flag.inl  Map.inl  Resources.cpp  Resources.h
GameServer/Test/: sockettest.py
GameServer/src/: CMakeLists.txt  gameserver.cpp
GameServer/src/Protocol/: CMakeLists.txt  PacketReader.cpp  PacketReader.hpp
GameServer/src/Protocol/PacketORM/: Base.proto  CMakeLists.txt
GameServer/src/Resources/: CMakeLists.txt  ResourceDelegator.cpp  ResourceDelegator.hpp  SharedResource.cpp  SharedResource.hpp
GameServer/src/Resources/SharedResources/: SharedFlag.hpp  SharedFlag.inl  SharedMap.hpp  SharedMap.inl
GameServer/test/: sockettest.py
